Resolves: tdf#144686 set the initial "papersize" to the sidebarwidth

this is the width it is eventually set to, setting that when constructed
makes more sense so text height calculations for the annotation window
are always sane for sidebar layout.

Change-Id: I159255cd877478902599fc4e62b3f6c7df70abb4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124688
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>